--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="gerb-of-USSR.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Раздел СССР в разработке | Section of the USSR in development</title>
+    <title>Союз Советских Социалистических Республик</title>
 
 </head>
 
@@ -39,65 +39,47 @@
     </header>
     <main>
         <div class="container">
-            <h1>СССР</h1>
+            <h1>Союз Советских Социалистических Республик</h1>
             <hr>
-            <div class="photol">
-                <img src="Leaders-of-the-USSR/QZWabBMFAUg.jpg" alt="">
-                <figcaption>Сталин ждет появления СССР <br> Stalin is waiting for the appearance of the USSR</figcaption>
-            </div>
-            Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на <a
-                href="/political-na-postsovet-space/">Главную</a> страницу
-            <hr>
-            This section is under development. Please be patient!!! In the meantime, go to the <a
-                href="/political-na-postsovet-space/">main page</a>
-            <div class="photo">
-                <img src="gerb-of-USSR.png" alt="">
-                <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod qui natus sint tempora enim voluptatum
-                ea delectus libero at, error consectetur, molestias soluta et assumenda nam accusamus dolorem
-                perspiciatis?
-                Similique cum quaerat velit sit dolore libero, pariatur laboriosam architecto voluptates totam voluptate
-                voluptatibus dolorum natus nobis quasi vitae dolores eligendi porro dignissimos, itaque a. Quod dicta
-                officia vitae porro?
-                Facilis itaque similique ipsum, qui harum numquam culpa, sunt nesciunt aliquid temporibus vel fugit
-                impedit non. Assumenda id ipsum pariatur ad distinctio saepe, expedita nesciunt, ducimus dolorum
-                reprehenderit rerum? Ex!
-                Debitis, harum quaerat ut iste dolor repellendus obcaecati qui labore soluta! Fugit odio ipsam
-                similique? Rerum corporis tempora at laboriosam dignissimos exercitationem pariatur nobis neque
-                expedita. Quae porro ut cum.
-                Hic vel, ut dolor ea suscipit, exercitationem magnam aspernatur facere itaque totam corporis? Nostrum
-                temporibus explicabo quasi nobis modi sunt excepturi sit sed ut labore perspiciatis iusto, architecto,
-                magnam repellat?
-                Qui praesentium vitae accusamus recusandae autem esse sit non sapiente? Eos ut dolores a nihil, sit amet
-                ullam excepturi consequuntur vitae qui hic. Veritatis explicabo, sunt facere minus sequi quos.
-                Soluta laboriosam repellendus rerum dolor facere necessitatibus, ipsum, repudiandae odio consequatur
-                praesentium perferendis labore, debitis reiciendis cupiditate. Iusto officiis nam officia, dolores in
-                eligendi velit quasi nihil nulla! Suscipit, modi.
-                Accusantium cupiditate minus id vitae, quod vel voluptate unde laboriosam! Commodi amet expedita laborum
-                quibusdam dicta est vero ullam nihil alias sed, placeat delectus consequatur magnam illo iste
-                accusantium excepturi.
-                Dolorem, consequuntur ad incidunt at enim maxime voluptatem mollitia, praesentium in corporis qui. Nisi
-                facilis aliquam voluptate iusto, non fugiat unde itaque delectus dolores, provident, molestias aliquid
-                aspernatur praesentium inventore.
-                Praesentium facilis aliquid libero modi ipsam perferendis quisquam veritatis amet tempora sit neque iste
-                deserunt quidem sapiente mollitia corrupti eius repellat, dolore enim nesciunt ex fugit? Dolore, facere
-                praesentium. Maiores!
-                Eligendi et harum laudantium dicta soluta voluptates! Debitis suscipit illo deleniti fugit odit numquam
-                commodi temporibus, doloremque totam, veniam aliquid adipisci aspernatur optio atque cupiditate
-                dignissimos hic. Ratione, numquam atque.
-                Necessitatibus quasi ut laborum sit illo dolorum, eius rem recusandae blanditiis, consequuntur, sapiente
-                impedit? Sint adipisci incidunt deserunt eaque! Ratione, delectus repellendus. Inventore similique, iste
-                error et saepe dolores laudantium?
-                Quisquam velit, impedit temporibus esse sint consectetur culpa quasi laboriosam, harum delectus labore
-                facilis doloremque explicabo assumenda eligendi vero similique a tempora. Laborum nobis libero magnam
-                fugit corrupti deserunt debitis.
-                Necessitatibus saepe placeat enim maiores esse sequi optio quis fuga at reiciendis cupiditate vel
-                delectus non, sunt, dolor exercitationem qui dignissimos. Placeat iusto incidunt tempora debitis
-                delectus repellat doloremque tempore.
-                Explicabo nihil ipsam voluptas accusamus esse dolores, dolorum nesciunt, unde provident, blanditiis rem
-                dolor. Quo incidunt dignissimos sit facere quia? Nobis recusandae cum ipsum in voluptatum! Iure dolor ut
-                fugiat.</p>
+            <p><b>Союз Советских Социалистических Республик</b>, сокращённо <b> СССР, Советский Союз, Союз ССР</b>, —
+                государство, существовавшее с 1922 года по 1991 год на территории Восточной Европы, Северной, части
+                Центральной и Восточной Азии. СССР на момент распада занимал почти 1⁄6 часть обитаемой суши Земли с
+                населением в 294 млн человек, а также 2-е место в мире по уровню промышленного производства — 16,5 %
+                мирового объёма и 7-е место в мире по уровню национального дохода (3,4 %). Образован на территории,
+                которую к 1917 году занимала Российская империя без Финляндии, части Польского царства и некоторых
+                других территорий.</p>
+            <p>
+                После Октябрьской социалистической революции в 1917 году и победы большевиков в Гражданской войне, 30
+                декабря 1922 года был образован СССР путём объединения РСФСР, Украинской ССР, Белорусской ССР и
+                Закавказской СФСР в одно государство с едиными органами власти со столицей в Москве, с сохранением
+                де-юре за каждой союзной республикой права свободного выхода из Союза.
+            </p>
+            <p>
+                22 июня 1941 года Германия при поддержке союзников напала на СССР. Началась Великая Отечественная война,
+                после победы в которой СССР стал, наряду с США, сверхдержавой. Советский Союз доминировал в
+                мировой системе социализма, а также был соучредителем ООН, постоянным членом Совета безопасности ООН с
+                правом вето.
+            </p>
+            <p>
+                Согласно Конституции 1977 года СССР провозглашался единым союзным многонациональным[10]
+                социалистическим государством. Союзные
+                республики считались суверенными государствами. Порядок выхода республик из Союза с 1990 года
+                регулировал специальный закон. Союзная республика имела право вступать в отношения с иностранными
+                государствами, заключать с ними договоры и обмениваться дипломатическими и консульскими представителями,
+                участвовать в деятельности международных организаций. Среди 50 стран-основателей ООН наряду с СССР
+                были и две его союзные республики: БССР и УССР.
+            </p>
+            <p>
+                Из-за ряда причин, в частности: низкой эффективности экономической системы, сильной зависимости от цен
+                на энергоресурсы, существенными расходами на гонку вооружений, массового дефицита товаров,
+                межнациональных противоречий и других проблем во второй половине 1980-х годов в СССР произошёл
+                экономический и политический кризис . Обострилось внутреннее политическое
+                противостояние. Попытки реформирования советской системы: демократизация, переход к рыночной экономике и
+                многопартийности, не помогли решить накопившиеся противоречия и в конечном счёте привели к распаду СССР.
+                В 1988—1991 годах произошёл ряд законодательных конфликтов между союзным центром и союзными
+                республиками.
+            </p>
+
             <br>
 
 
@@ -152,8 +134,10 @@
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/ussr/">СССР</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственные символы</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственные символы</a>
+                    </p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
+                    </p>
                 </div>
 
 
