--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -66,7 +66,7 @@
                 правом вето.
             </p>
             <p>
-                Согласно Конституции 1977 года СССР провозглашался единым союзным многонациональным[10]
+                Согласно Конституции 1977 года СССР провозглашался единым союзным многонациональным
                 социалистическим государством. Союзные
                 республики считались суверенными государствами. Порядок выхода республик из Союза с 1990 года
                 регулировал специальный закон. Союзная республика имела право вступать в отношения с иностранными
