--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/ussr/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="stylesheet" href="gos-simvolika.css">
     <link rel="shortcut icon" href="gerb-of-USSR.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -41,68 +42,186 @@
         <div class="container">
             <h1>Государственные символы</h1>
             <hr>
-            <div class="photol">
-                <img src="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png" alt="">
-                <figcaption>Горбачев ждет тебя в гости <br> Gorbachev is waiting for you to visit</figcaption>
-            </div>
-            Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на <a
-                href="/political-na-postsovet-space/">Главную</a> страницу
+            <p>
+                <b> Советская символика </b> — пласт государственных и революционных отличительных знаков и изображений,
+                олицетворяющих Советское государство и Октябрьскую революцию, которые использовались
+                коммунистами и левыми на демонстрациях, в военных выступлениях красноармейцев, а также выполняли
+                роль государственных символов Советского Союза.
+            </p>
+            <h2>Герб СССР</h2>
             <hr>
-            This section is under development. Please be patient!!! In the meantime, go to the <a
-                href="/political-na-postsovet-space/">main page</a>
-            <br>
+            <p>
+                <b> Герб СССР </b> — официальный государственный символ СССР, наряду с флагом и гимном, один из первых
+                социалистических гербов. Герб был установлен Конституцией СССР (статья 143) и представлял
+                собой изображение серпа и молота на фоне земного шара, в лучах солнца и в обрамлении колосьев, с
+                надписью на языках союзных республик «Пролетарии всех стран, соединяйтесь!». В верхней части герба —
+                пятиконечная красная звезда с жёлтым ободком.
+            </p>
             <div class="photo">
                 <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="">
-                <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
+                <figcaption>Государственный герб СССР</figcaption>
+            </div>
+            <p>
+                Государственный герб СССР символизирует союз рабочих и крестьян, добровольное объединение равноправных
+                союзных республик в едином союзном государстве, равноправие всех наций и выражает идею интернациональной
+                солидарности народов СССР с трудящимися всех стран планеты Земля.
+            </p>
+            <p>
+                Материки на гербе изображены светло-коричневыми, девизы — золотыми буквами по красной ленте. Колосья
+                символизируют жизнеспособность государства, процветание; солнце — свет коммунистических идей, светлое
+                будущее.
+            </p>
+            <h3>Гербы союзных и автономных республик</h3>
+            <p>
+                Государственные гербы имели все союзные республики, описание гербов содержалось в Конституциях
+                республик. Государственный герб СССР лёг в основу проектов гербов всех союзных республик, поэтому
+                основными элементами республиканских гербов также являлись серп и молот и надпись на языке союзной
+                республики: «Пролетарии всех стран, соединяйтесь!». В государственных гербах союзных республик были
+                отражены особенности их природы, хозяйства и культуры.
+            </p>
+            <p>
+                Государственным гербом автономной республики являлся герб той союзной республики, в состав которой она
+                входит, с добавлением наименования автономной республики на языках данной автономной и соответствующей
+                союзной республики и на русском языке, надпись «Пролетарии всех стран, соединяйтесь!» выполнялась на
+                языке автономной республики.
+            </p>
+            <h3>Текущий статус</h3>
+            <p>
+                Поскольку в ряде стран законодательно приравнивают советскую символику к нацистской символике , например
+                в Венгрии, Грузии, Латвии, Литве, Польше и на Украине - в этих странах запрещёна публичная демонстрации
+                в том числе и герба СССР (кроме употребления в информационных, музейных и подобных целях). Также
+                Европейским судом запрещена регистрация торговых марок с изображением герба СССР.
+            </p>
+            <h2>Флаг СССР</h2>
+            <hr>
+            <p>
+                <b> Государственный флаг СССР </b> — официальный символ СССР (наряду с Государственным гербом и
+                Государственным
+                гимном), являлся «символом государственного суверенитета СССР и нерушимого союза рабочих и крестьян в
+                борьбе за построение коммунистического общества». Красный цвет флага — символ героической борьбы
+                советского народа, руководимого КПСС, за построение социализма и коммунизма, серп и молот означают
+                незыблемый союз рабочего класса и колхозного крестьянства. Красная пятиконечная звезда на флаге СССР —
+                символ конечного торжества идей коммунизма на пяти (обитаемых, т. е. исключая Антарктиду) континентах
+                земного шара.
+            </p>
+            <p>
+                Представлял собой красное прямоугольное полотнище с изображением в верхнем углу, у древка, золотых серпа
+                и молота и над ними красной пятиконечной звезды, обрамлённой золотой каймой. Отношение ширины флага к
+                его длине 1:2.
+            </p>
+            <h3>Фото флагов СССР</h3>
+            <div class="president">
 
 
+                <div class="elsin">
+                    <img src="Flag_of_the_Soviet_Union_(1924).svg.png" alt="" class="pres">
+
+                    <figcaption>Флаг СССР на основании описания из
+                        <br> газеты «Известия» от 12 апреля 1924 года
+                    </figcaption>
+                </div>
+                <div class="putin">
+                    <img src="1920px-Flag_of_the_Soviet_Union_(1924–1936).svg.png" alt="" class="pres">
+                    <figcaption>Флаг СССР от 18 апреля 1924 года <br> восстановлен по эскизу А. Я. Лукши (Рига)</i>
+                    </figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="1920px-Flag_of_the_Soviet_Union_(1924–1955).svg.png" alt="" class="pres">
+                    <figcaption>Флаг СССР согласно Конституции СССР <br> от 1936 года</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="pres">
+                    <figcaption>Флаг СССР согласно <br> «Положению о Государственном флаге СССР» <br> от 19 августа 1955
+                        года</figcaption>
+                </div>
             </div>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod qui natus sint tempora enim voluptatum
-                ea delectus libero at, error consectetur, molestias soluta et assumenda nam accusamus dolorem
-                perspiciatis?
-                Similique cum quaerat velit sit dolore libero, pariatur laboriosam architecto voluptates totam voluptate
-                voluptatibus dolorum natus nobis quasi vitae dolores eligendi porro dignissimos, itaque a. Quod dicta
-                officia vitae porro?
-                Facilis itaque similique ipsum, qui harum numquam culpa, sunt nesciunt aliquid temporibus vel fugit
-                impedit non. Assumenda id ipsum pariatur ad distinctio saepe, expedita nesciunt, ducimus dolorum
-                reprehenderit rerum? Ex!
-                Debitis, harum quaerat ut iste dolor repellendus obcaecati qui labore soluta! Fugit odio ipsam
-                similique? Rerum corporis tempora at laboriosam dignissimos exercitationem pariatur nobis neque
-                expedita. Quae porro ut cum.
-                Hic vel, ut dolor ea suscipit, exercitationem magnam aspernatur facere itaque totam corporis? Nostrum
-                temporibus explicabo quasi nobis modi sunt excepturi sit sed ut labore perspiciatis iusto, architecto,
-                magnam repellat?
-                Qui praesentium vitae accusamus recusandae autem esse sit non sapiente? Eos ut dolores a nihil, sit amet
-                ullam excepturi consequuntur vitae qui hic. Veritatis explicabo, sunt facere minus sequi quos.
-                Soluta laboriosam repellendus rerum dolor facere necessitatibus, ipsum, repudiandae odio consequatur
-                praesentium perferendis labore, debitis reiciendis cupiditate. Iusto officiis nam officia, dolores in
-                eligendi velit quasi nihil nulla! Suscipit, modi.
-                Accusantium cupiditate minus id vitae, quod vel voluptate unde laboriosam! Commodi amet expedita laborum
-                quibusdam dicta est vero ullam nihil alias sed, placeat delectus consequatur magnam illo iste
-                accusantium excepturi.
-                Dolorem, consequuntur ad incidunt at enim maxime voluptatem mollitia, praesentium in corporis qui. Nisi
-                facilis aliquam voluptate iusto, non fugiat unde itaque delectus dolores, provident, molestias aliquid
-                aspernatur praesentium inventore.
-                Praesentium facilis aliquid libero modi ipsam perferendis quisquam veritatis amet tempora sit neque iste
-                deserunt quidem sapiente mollitia corrupti eius repellat, dolore enim nesciunt ex fugit? Dolore, facere
-                praesentium. Maiores!
-                Eligendi et harum laudantium dicta soluta voluptates! Debitis suscipit illo deleniti fugit odit numquam
-                commodi temporibus, doloremque totam, veniam aliquid adipisci aspernatur optio atque cupiditate
-                dignissimos hic. Ratione, numquam atque.
-                Necessitatibus quasi ut laborum sit illo dolorum, eius rem recusandae blanditiis, consequuntur, sapiente
-                impedit? Sint adipisci incidunt deserunt eaque! Ratione, delectus repellendus. Inventore similique, iste
-                error et saepe dolores laudantium?
-                Quisquam velit, impedit temporibus esse sint consectetur culpa quasi laboriosam, harum delectus labore
-                facilis doloremque explicabo assumenda eligendi vero similique a tempora. Laborum nobis libero magnam
-                fugit corrupti deserunt debitis.
-                Necessitatibus saepe placeat enim maiores esse sequi optio quis fuga at reiciendis cupiditate vel
-                delectus non, sunt, dolor exercitationem qui dignissimos. Placeat iusto incidunt tempora debitis
-                delectus repellat doloremque tempore.
-                Explicabo nihil ipsam voluptas accusamus esse dolores, dolorum nesciunt, unde provident, blanditiis rem
-                dolor. Quo incidunt dignissimos sit facere quia? Nobis recusandae cum ipsum in voluptatum! Iure dolor ut
-                fugiat.</p>
+            <h2>Гимн СССР</h2>
+            <hr>
+            <p>
+                <b> Государственный гимн СССР </b> — официальный государственный гимн Советского Союза, принятый в 1943
+                году
+                вместо «Интернационала».
+            </p>
+            <p>
+                Слова для гимна написали С. В. Михалков и Эль-Регистан, музыку — А. В. Александров. В 2000 году мелодия
+                Александра Александрова вкупе с новым текстом авторства Сергея Михалкова стала гимном России.
+            </p>
+            <p>
+                С 1944 по 1956 год гимн исполнялся в первоначальной версии, включавшей упоминание о И. В. Сталине.
+                "Сквозь грозы сияло нам солнце свободы, / И Ленин великий нам путь озарил. / Нас вырастил Сталин - на
+                верность народу, / На труд и на подвиги нас вдохновил..."
+            </p>
+            <h3>Разработка нового гимна</h3>
+            <p>
+                В ходе "мягкой десталинизации" 7 декабря 1955 года было принято постановление Центрального Комитета КПСС
+                о создании комиссии во главе с Д.Т. Шипиловым, на которую было возложено руководство работой по
+                подготовке нового Государственного гимна СССР. Регламент, утвержденный ЦК КПСС, предусматривал конкурс
+                стихов для нового гимна в два этапа: первый анонимный, в конвертах с написанными на них девизами,
+                второй личный, из отобранных стихов. На первый этап 67 поэтов представили 84 текста. Во второй тур
+                прошли произведения 10 авторов: Н.А. Заболоцкого, М.В. Исаковского, Б.Н. Кушелева, С.В. Михалкова (два
+                текста), С.Г. Острового, П.М. Панченко, Н.И. Рылевского, М.Ф. Рылевского, В.М. Саянова, С.И.
+                Чиковани.
+            </p>
+            <h3>
+                Новая редакция текста
+            </h3>
+            <p>
+                С 1956 по 1977 год гимн исполнялся без слов. В 1970 году С. В. Михалков подготовил
+                откорректированный вариант текста гимна. До распада СССР гимн исполнялся в новой редакции,
+                впоследствии утверждённой указом Президиума Верховного Совета СССР от 27 мая 1977 года. В новой версии
+                были исключены упоминания о Сталине, счастье, славе (народов), победах («от победы к победе»), армии и
+                добавлены слова о партии и коммунизме.
+            </p>
+            <p>
+                С 23 ноября 1990 года гимн стал исключительно союзным, так как последняя республика, не имевшая своего
+                гимна — РСФСР — утвердила свой собственный гимн («Патриотическую песню» М. И. Глинки). Последний раз
+                в качестве государственного гимна был исполнен 25 декабря 1991 года — в последний день существования
+                СССР. В Литве, Латвии, Грузии и Украине публичное исполнение гимна СССР запрещено законом, поскольку
+                эта музыка интерпретируется как «коммунистическая символика».
+            </p>
+            <br><br>
+            <h3>Текст гимна СССР</h3>
+            <hr>
+            <div class="gimn">
+                <p>Союз нерушимый республик свободных</p>
+                <p>Сплотила навеки Великая Русь.</p>
+                <p>Да здравствует созданный волей народов</p>
+                <p>Единый, могучий Советский Союз!</p>
 <br>
+                <p>Славься, Отечество наше свободное,</p>
+                <p>Дружбы народов надёжный оплот!</p>
+                <p>Партия Ленина — сила народная</p>
+               <p> Нас к торжеству коммунизма ведёт!</p>
+<br>
+                <p>Сквозь грозы сияло нам солнце свободы,</p>
+                <p>И Ленин великий нам путь озарил:</p>
+                <p>На правое дело он поднял народы,</p>
+                <p>На труд и на подвиги нас вдохновил!</p>
+<br>
+                <p>Славься, Отечество наше свободное,</p>
+               <p> Дружбы народов надёжный оплот!</p>
+               <p> Партия Ленина — сила народная</p>
+               <p> Нас к торжеству коммунизма ведёт!</p>
+<br>
+               <p> В победе бессмертных идей коммунизма</p>
+                <p>Мы видим грядущее нашей страны,</p>
+                <p>И Красному знамени славной Отчизны</p>
+                <p>Мы будем всегда беззаветно верны!</p>
+<br>
+                <p>Славься, Отечество наше свободное,</p>
+               <p>Дружбы народов надёжный оплот!</p>
+                <p>Партия Ленина — сила народная</p>
+                <p>Нас к торжеству коммунизма ведёт!</p>
+                <br><br>
+         
+            <h3>Музыка Гимна СССР</h3>
+        
+                <audio src="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3" controls></audio>
+            </div>
+            <br>
+
+
         </div>
 
     </main>
