--- a/country/ussr/Leaders-of-the-USSR/index.html
+++ b/country/ussr/Leaders-of-the-USSR/index.html
@@ -41,63 +41,37 @@
         <div class="container">
             <h1>Руководители СССР</h1>
             <hr>
-            Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на <a
-                href="/political-na-postsovet-space/">Главную</a> страницу
-            <hr>
-            This section is under development. Please be patient!!! In the meantime, go to the <a
-                href="/political-na-postsovet-space/">main page</a>
-            <div class="photo">
-                <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="">
-                <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
-            </div>
-            <div class="plotnost">
-                <img src="scale_1200.jpg" alt="">
-                <figcaption>Мужик с медведем очень сильно ждут появления раздела СССР <br> The man with the bear is very much waiting for the appearance of the partition of the USSR</figcaption>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod qui natus sint tempora enim voluptatum
-                ea delectus libero at, error consectetur, molestias soluta et assumenda nam accusamus dolorem
-                perspiciatis?
-                Similique cum quaerat velit sit dolore libero, pariatur laboriosam architecto voluptates totam voluptate
-                voluptatibus dolorum natus nobis quasi vitae dolores eligendi porro dignissimos, itaque a. Quod dicta
-                officia vitae porro?
-                Facilis itaque similique ipsum, qui harum numquam culpa, sunt nesciunt aliquid temporibus vel fugit
-                impedit non. Assumenda id ipsum pariatur ad distinctio saepe, expedita nesciunt, ducimus dolorum
-                reprehenderit rerum? Ex!
-                Debitis, harum quaerat ut iste dolor repellendus obcaecati qui labore soluta! Fugit odio ipsam
-                similique? Rerum corporis tempora at laboriosam dignissimos exercitationem pariatur nobis neque
-                expedita. Quae porro ut cum.
-                Hic vel, ut dolor ea suscipit, exercitationem magnam aspernatur facere itaque totam corporis? Nostrum
-                temporibus explicabo quasi nobis modi sunt excepturi sit sed ut labore perspiciatis iusto, architecto,
-                magnam repellat?
-                Qui praesentium vitae accusamus recusandae autem esse sit non sapiente? Eos ut dolores a nihil, sit amet
-                ullam excepturi consequuntur vitae qui hic. Veritatis explicabo, sunt facere minus sequi quos.
-                Soluta laboriosam repellendus rerum dolor facere necessitatibus, ipsum, repudiandae odio consequatur
-                praesentium perferendis labore, debitis reiciendis cupiditate. Iusto officiis nam officia, dolores in
-                eligendi velit quasi nihil nulla! Suscipit, modi.
-                Accusantium cupiditate minus id vitae, quod vel voluptate unde laboriosam! Commodi amet expedita laborum
-                quibusdam dicta est vero ullam nihil alias sed, placeat delectus consequatur magnam illo iste
-                accusantium excepturi.
-                Dolorem, consequuntur ad incidunt at enim maxime voluptatem mollitia, praesentium in corporis qui. Nisi
-                facilis aliquam voluptate iusto, non fugiat unde itaque delectus dolores, provident, molestias aliquid
-                aspernatur praesentium inventore.
-                Praesentium facilis aliquid libero modi ipsam perferendis quisquam veritatis amet tempora sit neque iste
-                deserunt quidem sapiente mollitia corrupti eius repellat, dolore enim nesciunt ex fugit? Dolore, facere
-                praesentium. Maiores!
-                Eligendi et harum laudantium dicta soluta voluptates! Debitis suscipit illo deleniti fugit odit numquam
-                commodi temporibus, doloremque totam, veniam aliquid adipisci aspernatur optio atque cupiditate
-                dignissimos hic. Ratione, numquam atque.
-                Necessitatibus quasi ut laborum sit illo dolorum, eius rem recusandae blanditiis, consequuntur, sapiente
-                impedit? Sint adipisci incidunt deserunt eaque! Ratione, delectus repellendus. Inventore similique, iste
-                error et saepe dolores laudantium?
-                Quisquam velit, impedit temporibus esse sint consectetur culpa quasi laboriosam, harum delectus labore
-                facilis doloremque explicabo assumenda eligendi vero similique a tempora. Laborum nobis libero magnam
-                fugit corrupti deserunt debitis.
-                Necessitatibus saepe placeat enim maiores esse sequi optio quis fuga at reiciendis cupiditate vel
-                delectus non, sunt, dolor exercitationem qui dignissimos. Placeat iusto incidunt tempora debitis
-                delectus repellat doloremque tempore.
-                Explicabo nihil ipsam voluptas accusamus esse dolores, dolorum nesciunt, unde provident, blanditiis rem
-                dolor. Quo incidunt dignissimos sit facere quia? Nobis recusandae cum ipsum in voluptatum! Iure dolor ut
-                fugiat.</p>
+            <p><b> Перечень фактических </b> (де-факто) <b>руководителей СССР</b> и Коммунистической Партии Советского
+                Союза.</p>
+            <p>
+                В годы правления Владимира Ленина формально высшей государственной должностью был Председатель ВЦИК, но
+                вся реальная власть была сосредоточена в Совете народных комиссаров, который и возглавлял Ленин.
+                Должность Генерального секретаря Центрального комитета РКП (б)—ВКП (б)—КПСС была учреждена в апреле 1922
+                и стала фактически важнейшей государственной должностью после смерти Ленина. Влияние Иосифа Сталина,
+                занимавшего этот пост, росло, и к концу 1920-х годов он фактически обладал неограниченной властью.
+            </p>
+            <p>Формально же к 1953 году Сталин являлся лишь главой исполнительной власти страны (Председатель Совета
+                Министров СССР). Именно поэтому сменивший его на этом посту Георгий Маленков, являвшийся негласным
+                преемником Сталина, стал новым лидером и главой государства. Маленков
+                вплоть до 1955 года возглавлял Совет Министров, однако начиная с избрания на вновь созданную должность
+                Первого секретаря ЦК КПСС в сентябре 1953 года постепенно набирает политический вес Никита Хрущёв.
+            </p>
+            <p>
+                В последующем в СССР пост Председателя Совета Министров не воспринимался как главный государственный
+                пост. Юридически (по конституции СССР) руководителями государства были лица, назначаемые на должность
+                Председателя Президиума Верховного Совета СССР (позже — Председателя Верховного Совета СССР). В 1988
+                году этот пост занял Михаил Горбачёв, что позволяло ему, являясь фактическим главой государства, быть
+                руководителем и партии, и государственной власти. Исполнительную власть тогда возглавлял, занимая пост
+                Председателя Совета Министров, Николай Рыжков. С марта 1990 года Горбачёв совмещал посты Генерального
+                секретаря ЦК КПСС и Президента СССР. Пост Президента сменил пост Председателя Верховного Совета в
+                качестве главы государства, оставив второму лишь функции руководителя законодательной власти страны, но
+                не руководителя самого государства. Тогда же была отменена статья 6 Конституции СССР, и в результате
+                КПСС лишилась монополии на власть, но при этом оставалась правящей партией до событий 19-21 августа 1991
+                года в Москве. 25 декабря 1991 года СССР окончательно перестал существовать. За 69 лет существования
+                СССР фактически было всего 8 руководителей партии и государства (включая Маленкова, который возглавлял
+                только правительство).
+            </p>
+         
             <br>
 
 
