--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -30,7 +30,7 @@
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/russia/info/">Последние Новости</a>
+            <a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/" id="id">Президент</a>
         </div>
     </header>
@@ -679,7 +679,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
 
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition">Наши русские традиции</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a>
                     </p>
