--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -32,7 +32,7 @@
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/russia/gos-simvolika/" id="id">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/russia/info/">Последние Новости</a>
+            <a href="/political-na-postsovet-space/country/russia/russian-tradition">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
@@ -294,7 +294,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в Российской Федерации</a>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a>
                     </p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федерации</a>
