--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -29,7 +29,7 @@
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/russia/" id="id">Основная информация</a>
             <a href="gos-simvolika/">Государственная символика</a>
-            <a href="info/">Последние Новости</a>
+            <a href="russian-tradition/">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
     </header>
@@ -374,7 +374,7 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/info/">Новости в РФ</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
                             Федераци</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
