--- a/for-users/index.html
+++ b/for-users/index.html
@@ -79,15 +79,15 @@
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
-                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/"> <img src="headphones.svg" alt="" class="fr"> Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/"> <img src="info.svg" alt="" class="fr"> Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/"> <img src="info.svg" alt="" class="fr"> Политика
                             Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/"> <img src="free-icon-download-117446.svg" alt="" class="fr">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><b><a href="/political-na-postsovet-space/country/"><img src="pl.svg" alt="" class="fr"> Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
