--- a/country/index.html
+++ b/country/index.html
@@ -290,12 +290,12 @@
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
-                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                    <p>  <a href="/political-na-postsovet-space/country/ussr/"><img src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="fr"> СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/"><img src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png" alt="" class="fr"> Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"><img src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png" alt="" class="fr"> Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt="" class="fr"> Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/"><img src="/political-na-postsovet-space/country/dni/gos-simvolika/flag-of-Dni.png" alt="" class="fr"> ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/"><img src="/political-na-postsovet-space/country/lnr/gos-simvolika/flag-of-Lnr.png" alt="" class="fr"> ЛНР</a></p>
 
                 </div>
 
