--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -119,49 +119,49 @@
                 навзничь и попранного конём дракона.
             </p>
             <div class="flags">
-            <h3>Основы государственного строя</h3>
-            <p>Россия — демократическое федеративное правовое государство с республиканской формой правления.</p>
-            <p>Россия является федерацией. Основным законом государства является Конституция, принятая в 1993
-                году. В настоящее время Конституция России действует с рядом поправок, основные из которых были
-                приняты
-                в 2008 году. Данные поправки, увеличившие срок полномочий президента Российской Федерации с 4 до 6
-                лет,
-                а Государственной думы с 4 до 5 лет, получили значительный международный резонанс. В основе
-                государственного строя России, согласно Конституции, находятся следующие базовые принципы:
-                народовластие, федерализм, социальное государство, разделение властей, светское государство,
-                приоритет
-                прав и свобод человека, местное самоуправление, многопартийность, идеологическое и политическое
-                многообразие, верховенство права, многообразие форм собственности, форма правления и
-                государственного
-                устройства, государственный суверенитет. По мнению исследователей, публично-правовая
-                ответственность носителей публичной власти должна иметь субсидиарный характер и её основы должны
-                быть
-                закреплены в Конституции РФ; необходима детальная проработка и совершенствование правового механизма
-                защиты основ конституционного строя Российской Федерации.
-            </p>
+                <h3>Основы государственного строя</h3>
+                <p>Россия — демократическое федеративное правовое государство с республиканской формой правления.</p>
+                <p>Россия является федерацией. Основным законом государства является Конституция, принятая в 1993
+                    году. В настоящее время Конституция России действует с рядом поправок, основные из которых были
+                    приняты
+                    в 2008 году. Данные поправки, увеличившие срок полномочий президента Российской Федерации с 4 до 6
+                    лет,
+                    а Государственной думы с 4 до 5 лет, получили значительный международный резонанс. В основе
+                    государственного строя России, согласно Конституции, находятся следующие базовые принципы:
+                    народовластие, федерализм, социальное государство, разделение властей, светское государство,
+                    приоритет
+                    прав и свобод человека, местное самоуправление, многопартийность, идеологическое и политическое
+                    многообразие, верховенство права, многообразие форм собственности, форма правления и
+                    государственного
+                    устройства, государственный суверенитет. По мнению исследователей, публично-правовая
+                    ответственность носителей публичной власти должна иметь субсидиарный характер и её основы должны
+                    быть
+                    закреплены в Конституции РФ; необходима детальная проработка и совершенствование правового механизма
+                    защиты основ конституционного строя Российской Федерации.
+                </p>
 
-            <h3>Федеративное устройство</h3>
+                <h3>Федеративное устройство</h3>
 
-            <p>Россия — государство с федеративным устройством. В составе Российской Федерации 85 равноправных
-                субъектов федерации, в том числе 22 республики, 9 краёв, 46 областей, 3 города федерального
-                значения, 1
-                автономная область, 4 автономных округа и 1 федеральная территория.</p>
+                <p>Россия — государство с федеративным устройством. В составе Российской Федерации 85 равноправных
+                    субъектов федерации, в том числе 22 республики, 9 краёв, 46 областей, 3 города федерального
+                    значения, 1
+                    автономная область, 4 автономных округа и 1 федеральная территория.</p>
 
-            <p>Система органов государственной власти субъектов федерации определяется общими принципами,
-                устанавливаемыми федерацией. В каждом регионе имеется законодательный (представительный) орган
-                (законодательное собрание, дума) и исполнительный орган (правительство). Во всех субъектах
-                существует
-                должность высшего должностного лица (глава, губернатор), которые избираются на срок не более 5 лет и
-                не
-                могут замещать указанную должность более двух сроков подряд.</p>
+                <p>Система органов государственной власти субъектов федерации определяется общими принципами,
+                    устанавливаемыми федерацией. В каждом регионе имеется законодательный (представительный) орган
+                    (законодательное собрание, дума) и исполнительный орган (правительство). Во всех субъектах
+                    существует
+                    должность высшего должностного лица (глава, губернатор), которые избираются на срок не более 5 лет и
+                    не
+                    могут замещать указанную должность более двух сроков подряд.</p>
 
-            <p>Российская Федерация также подразделяется на 8 федеральных округов, в каждом из которых работает
-                полномочный представитель президента РФ.</p>
+                <p>Российская Федерация также подразделяется на 8 федеральных округов, в каждом из которых работает
+                    полномочный представитель президента РФ.</p>
 
-            <p>Субъекты федерации имеют своё административно-территориальное деление. Как правило, основными
-                административно-территориальными единицами в составе субъекта федерации являются районы и города
-                областного (республиканского, краевого, окружного) значения.</p>
-            
+                <p>Субъекты федерации имеют своё административно-территориальное деление. Как правило, основными
+                    административно-территориальными единицами в составе субъекта федерации являются районы и города
+                    областного (республиканского, краевого, окружного) значения.</p>
+
                 <h3 id="president">Президент</h3>
                 <p style="text-align: center; "><i>Основная статья</i>: <a href="president/">Президент Российской
                         Федерации</a></p>
@@ -350,7 +350,8 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
                 <div class="col-sm">
@@ -370,14 +371,26 @@
 
                 </div>
                 <div class="col-sm country">
-                    <p><b><a href="/political-na-postsovet-space/country/russia/">Россия</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственные символы</a>
+                    <p><b><a href="/political-na-postsovet-space/country/russia/"> <img
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    class="fr" alt=""> Россия</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                class="fr" alt=""> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia-before-1993.png"
+                                class="fr" alt="">Государственные символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Наши русские традиции</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">Президент Российской
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"
+                                class="fr" alt=""> Наши русские традиции</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
+                                class="fr" alt=""> Президент Российской
                             Федераци</a></p>
-                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru"> <img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"
+                                class="fr" alt="">Сайт президента РФ</a></p>
                 </div>
 
 
