--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -320,7 +320,7 @@
         </div>
 
     </main>
-    <footer>
+    <footer class="rus">
 
 
 
@@ -356,7 +356,7 @@
                 </div>
                 <div class="col-sm">
                     <div class="preside">
-                        <img src="Boris.jpg" alt="">
+                        <img src="Boris.png" alt="">
                         <figcaption>Борис Николаевич Ельцин - первый президент Российской Федерации</figcaption>
                     </div>
                 </div>
